<resources>
    <string name="app_name">Caesar Cipher</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_sms">SMS</string>
    <string name="author">Gerry Hurdle (hurdleg)</string>
    <string name="clear">Clear</string>
    <string name="encrypted_prompt">Encrypted Message:</string>
    <string name="encrypted_hint">Type Your Encrypted Message Here&#8230;</string>
    <string name="plain_prompt">Plain Message:</string>
    <string name="plain_hint">Type Your Message Here&#8230;</string>
    <string name="title_activity_encrypted_text">Encrypted Text</string>
</resources>
